--- a/regina/index.html
+++ b/regina/index.html
@@ -572,7 +572,7 @@
   <div class="auth-actions">
     <a class="btn-submit" href="https://www.brokeant.com/register.html">Create Account</a>
     <a class="btn-submit btn-alt" href="https://www.brokeant.com/login.html">Login</a>
-    <a class="btn-submit btn-alt" href="https://www.brokeant.com/index.html">Browse Images</a>
+    <a class="btn-submit btn-alt" href="https://www.brokeant.com/index.html">Browse Images on the Home Page</a>
   </div>
 </div>
 
