Add local admin CTA and details page

--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
       background: #f7f7f7;
     }
 
+    .local-admin-link {
+      color: #133d60;
+      font-weight: 700;
+      text-decoration: underline;
+    }
+
+    .local-admin-link:hover {
+      color: #0b2b46;
+    }
+
     @media (max-width: 520px) {
       .welcome-static .welcome-layout {
         grid-template-columns: 1fr;
@@ -593,13 +603,14 @@
     <div class="welcome-layout">
       <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
       <div>
-        When you pay the $2 you will have access to all the items in your city, and all the cities that you are eligible to see.<br><br>
+        <a class="local-admin-link" href="https://www.brokeant.com/local-admin.html" target="_blank" rel="noopener">BECOME A LOCAL ADMIN, CLICK HERE FOR DETAILS</a><br><br>
+        When you pay the $2, you get access to all items in your location and any other locations you're approved to view.<br><br>
         BrokeAnt is your local, ad-free marketplace.<br>
         For just $2 per location, you get 20 advertisements and access to verified buyers and sellers in that area.<br>
-        Post your items, browse nearby deals, and message sellers directly, no clutter, no hidden fees.<br>
-        Need more reach? You can request additional locations anytime to expand your audience.<br>
+        Post your items, browse nearby deals, and message sellers directly - no clutter, no hidden fees.<br>
+        Need more reach? Request additional locations anytime to expand your audience.<br>
         Happy buying and selling!<br><br>
-        Even though emails are hidden by default, either person can choose to include their own email or phone number in a message if they want.
+        Even though emails are hidden by default, either person can choose to share their email or phone number in a message if they want.
       </div>
     </div>
   </div>
@@ -756,13 +767,14 @@ function closeWelcomeModal(e) {
         <div class="welcome-layout">
           <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
           <div>
-            When you pay the $2 you will have access to all the items in your city, and all the cities that you are eligible to see.<br><br>
+            <a class="local-admin-link" href="https://www.brokeant.com/local-admin.html" target="_blank" rel="noopener">BECOME A LOCAL ADMIN, CLICK HERE FOR DETAILS</a><br><br>
+            When you pay the $2, you get access to all items in your location and any other locations you're approved to view.<br><br>
             BrokeAnt is your local, ad-free marketplace.<br>
             For just $2 per location, you get 20 advertisements and access to verified buyers and sellers in that area.<br>
-            Post your items, browse nearby deals, and message sellers directly, no clutter, no hidden fees.<br>
-            Need more reach? You can request additional locations anytime to expand your audience.<br>
+            Post your items, browse nearby deals, and message sellers directly - no clutter, no hidden fees.<br>
+            Need more reach? Request additional locations anytime to expand your audience.<br>
             Happy buying and selling!<br><br>
-            Even though emails are hidden by default, either person can choose to include their own email or phone number in a message if they want.
+            Even though emails are hidden by default, either person can choose to share their email or phone number in a message if they want.
           </div>
         </div>
       </div>
