--- a/local-admin.html
+++ b/local-admin.html
@@ -161,6 +161,12 @@
         Please <a href="https://www.brokeant.com/login.html" target="_blank" rel="noopener">log in</a> to submit an application.
       </div>
       <form id="applyForm">
+        <label for="applyName">Your Full Name</label>
+        <input type="text" id="applyName" placeholder="Full name" required>
+
+        <label for="applyPhone">Phone Number</label>
+        <input type="tel" id="applyPhone" placeholder="Phone number" required>
+
         <label for="applyCity">Town/City</label>
         <input type="text" id="applyCity" placeholder="Your town name" required>
 
@@ -196,11 +202,21 @@
       statusEl.textContent = '';
       statusEl.className = 'status';
 
+      const name = document.getElementById('applyName').value.trim();
+      const phone = document.getElementById('applyPhone').value.trim();
       const city = document.getElementById('applyCity').value.trim();
       const reason = document.getElementById('applyReason').value.trim();
 
+      if (!name || !phone || !city) {
+        statusEl.textContent = 'Name, phone, and city are required.';
+        statusEl.className = 'status error';
+        return;
+      }
+
       const formData = new FormData();
       formData.append('action', 'request');
+      formData.append('admin_name', name);
+      formData.append('admin_phone', phone);
       formData.append('city', city);
       formData.append('reason', reason);
 
