--- a/city.html
+++ b/city.html
@@ -277,6 +277,17 @@
       font-size: 14px;
       margin-top: 8px;
     }
+
+    .item-badge {
+      display: inline-block;
+      padding: 3px 8px;
+      border-radius: 999px;
+      background: #dbeafe;
+      color: #1e40af;
+      font-size: 11px;
+      font-weight: bold;
+      margin-top: 6px;
+    }
     
     .modal {
       display: none;
@@ -339,6 +350,17 @@
       border-radius: 4px;
       margin-top: 20px;
       font-size: 13px;
+    }
+
+    .modal .local-admin-badge {
+      display: inline-block;
+      background: #dbeafe;
+      color: #1e40af;
+      font-weight: 700;
+      font-size: 11px;
+      padding: 3px 8px;
+      border-radius: 999px;
+      margin-bottom: 6px;
     }
 
     .modal .contact textarea {
@@ -843,7 +865,7 @@
     });
     return filtered;
   }
-  function openModal(itemType, itemName, itemDesc, itemPrice, itemImage, itemImages, itemSellerId, itemId) {
+  function openModal(itemType, itemName, itemDesc, itemPrice, itemImage, itemImages, itemSellerId, itemId, itemIsLocalAdmin) {
     const modalBody = document.getElementById('modalBody');
     const isOwner = currentUser && itemSellerId && currentUser.user_id === itemSellerId;
 
@@ -866,13 +888,17 @@
       priceHTML = isNaN(p) ? `<div class="price">${itemPrice}</div>` : `<div class="price">$${p.toFixed(2)}</div>`;
     }
 
+    const badgeHtml = itemIsLocalAdmin ? `<div class="local-admin-badge">Local Admin</div>` : '';
+
     const contactHTML = isOwner
       ? `<div class="contact">
+        ${badgeHtml}
         <strong>Verified Seller</strong>
         <div class="contact-note">This is your advertisement.</div>
       </div>`
       : `
       <div class="contact">
+        ${badgeHtml}
         <strong>Verified Seller</strong>
         <div class="contact-note">Use the form below to message the seller. Your email stays private.</div>
         <textarea id="contactMessage" rows="4" placeholder="Write your message..."></textarea>
@@ -1114,6 +1140,7 @@ function sendContactMessage(listingId) {
     const price = item.price || item.itemPrice || '';
     const category = item.category || item.itemType || '';
     const sellerId = item.user_id || item.userId || 0;
+    const isLocalAdmin = item.is_local_admin === 1 || item.is_local_admin === '1' || item.is_local_admin === true;
     const city = item.city || '';
 
     let imageHTML = '';
@@ -1129,6 +1156,7 @@ function sendContactMessage(listingId) {
         ${imageHTML}
         <div class="content">
           <h3>${title}</h3>
+          ${isLocalAdmin ? `<div class="item-badge">Local Admin</div>` : ''}
           ${price ? `<div class="item-price">$${parseFloat(price).toFixed(2)}</div>` : '<div class="item-price">Contact for price</div>'}
           ${city ? `<div class="locked-note">${city}</div>` : ''}
         </div>
@@ -1145,7 +1173,7 @@ function sendContactMessage(listingId) {
     if (isVerified) {
       itemBlock.style.cursor = 'pointer';
       itemBlock.addEventListener('click', function() {
-        openModal(category, title, desc, price, imageUrl, item.images || [], sellerId, item.id || 0);
+        openModal(category, title, desc, price, imageUrl, item.images || [], sellerId, item.id || 0, isLocalAdmin);
       });
     }
 
