--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
       box-shadow: 0 4px 15px rgba(0,0,0,0.3);
       object-fit: cover;
       border: 3px solid #ffb34d;
+      cursor: pointer;
     }
     
     .alfred-name {
@@ -569,7 +570,7 @@
   
   <div class="header">
     <div class="alfred-section">
-      <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image">
+      <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image" onclick="openWelcomeModal()">
       <p class="alfred-name">Hi, I am Alfred</p>
       <p class="alfred-note">Welcome to BrokeAnt - YOUR local, ad-free marketplace. For $2 per location, you get 20 advertisements and access to verified buyers and sellers in your area.</p>
       <p class="alfred-note">The cost is $2 CDN via e-transfer per location which gives you 20 advertisements. Ad free.</p>
