Rename Regina to Regina Ward 1 in UI

--- a/regina/index.html
+++ b/regina/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Regina Advertisements | BrokeAnt Marketplace</title>
-    <meta name="description" content="Browse advertisements in Regina on BrokeAnt. Sign in to view details and contact sellers.">
+  <title>Regina Ward 1 Advertisements | BrokeAnt Marketplace</title>
+    <meta name="description" content="Browse advertisements in Regina Ward 1 on BrokeAnt. Sign in to view details and contact sellers.">
     <link rel="canonical" href="https://www.brokeant.com/regina/index.html">
 
-    <meta property="og:title" content="Regina Advertisements | BrokeAnt Marketplace">
-    <meta property="og:description" content="Browse advertisements in Regina on BrokeAnt. Sign in to view details and contact sellers.">
+    <meta property="og:title" content="Regina Ward 1 Advertisements | BrokeAnt Marketplace">
+    <meta property="og:description" content="Browse advertisements in Regina Ward 1 on BrokeAnt. Sign in to view details and contact sellers.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.brokeant.com/regina/index.html">
     <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
     <meta property="og:site_name" content="BrokeAnt Marketplace">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Regina Advertisements | BrokeAnt Marketplace">
-    <meta name="twitter:description" content="Browse advertisements in Regina on BrokeAnt. Sign in to view details and contact sellers.">
+    <meta name="twitter:title" content="Regina Ward 1 Advertisements | BrokeAnt Marketplace">
+    <meta name="twitter:description" content="Browse advertisements in Regina Ward 1 on BrokeAnt. Sign in to view details and contact sellers.">
     <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
 
   <style>
@@ -575,7 +575,7 @@
 </head>
 <body>
 <header>
-  <h1>🏪 BrokeAnt Marketplace - Regina</h1>
+  <h1>🏪 BrokeAnt Marketplace - Regina Ward 1</h1>
   <div class="header-right">
     <div class="user-info">
       <div id="userEmail" style="display:none;"></div>
@@ -700,7 +700,7 @@
 </div>
 
 <script>
-  const CURRENT_CITY = 'Regina';
+  const CURRENT_CITY = 'Regina Ward 1';
   const INITIAL_ADS = 20;
   const ADS_COST = 2;
   
