--- a/register.html
+++ b/register.html
@@ -195,7 +195,7 @@
         <option value="">Select your city</option>
         <option value="Melville">Melville</option>
         <option value="Yorkton">Yorkton</option>
-        <option value="Regina">Regina</option>
+        <option value="Regina Ward 1">Regina Ward 1</option>
       </select>
     </div>
     
