Add Saskatoon Ward 1 to city dropdowns

--- a/register.html
+++ b/register.html
@@ -196,6 +196,7 @@
         <option value="Melville">Melville</option>
         <option value="Yorkton">Yorkton</option>
         <option value="Regina Ward 1">Regina Ward 1</option>
+        <option value="Saskatoon Ward 1">Saskatoon Ward 1</option>
       </select>
     </div>
     
