Add Brocante origin note to welcome text

--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@
         Post your items, browse nearby deals, and message sellers directly - no clutter, no hidden fees.<br>
         Need more reach? Request additional locations anytime to expand your audience.<br>
         Happy buying and selling!<br><br>
+        Brocante "In France, a shop or market where secondhand goods are sold" But the French pronunciation is slightly different than the English way. So thats how I got my name. Broke Ant. Happy selling and buying !!<br><br>
         Even though emails are hidden by default, either person can choose to share their email or phone number in a message if they want.
       </div>
     </div>
@@ -775,6 +776,7 @@ function closeWelcomeModal(e) {
             Post your items, browse nearby deals, and message sellers directly - no clutter, no hidden fees.<br>
             Need more reach? Request additional locations anytime to expand your audience.<br>
             Happy buying and selling!<br><br>
+            Brocante "In France, a shop or market where secondhand goods are sold" But the French pronunciation is slightly different than the English way. So thats how I got my name. Broke Ant. Happy selling and buying !!<br><br>
             Even though emails are hidden by default, either person can choose to share their email or phone number in a message if they want.
           </div>
         </div>
