--- a/index.html
+++ b/index.html
@@ -786,14 +786,11 @@ function closeWelcomeModal(e) {
           <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
           <div>
             <a class="local-admin-link" href="https://www.brokeant.com/local-admin.html" target="_blank" rel="noopener">BECOME A LOCAL ADMIN, CLICK HERE FOR DETAILS</a><br><br>
-            When you pay the $2, you get access to all items in your location and any other locations you're approved to view.<br><br>
-            BrokeAnt is your local, ad-free marketplace.<br>
-            For just $2 per location, you get 50 advertisements and access to verified buyers and sellers in that area.<br>
-            Post your items, browse nearby deals, and message sellers directly - no clutter, no hidden fees.<br>
-            Need more reach? Request additional locations anytime to expand your audience.<br>
-            Happy buying and selling!<br><br>
-            Brocante "In France, a shop or market where secondhand goods are sold" But the French pronunciation is slightly different than the English way. So thats how I got my name. Broke Ant. Happy selling and buying !!<br><br>
-            Even though emails are hidden by default, either person can choose to share their email or phone number in a message if they want.
+            Pay $2 per location to unlock 50 advertisements and verified buyers and sellers.<br>
+            Post items, browse deals, and message sellers - no clutter, no hidden fees.<br>
+            Need more reach? Request additional locations anytime.<br>
+            BrokeAnt is inspired by "brocante," the French word for a secondhand market.<br>
+            Emails stay hidden unless you choose to share.
           </div>
         </div>
       </div>
