--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       align-items: center;
       justify-content: center;
       z-index: 1200;
-      padding: 20px;
+      padding: 12px;
       box-sizing: border-box;
     }
 
@@ -447,13 +447,13 @@
     .welcome-content {
       background: white;
       border-radius: 14px;
-      padding: 22px 24px;
+      padding: 16px 18px;
       width: 100%;
       max-width: 520px;
       box-shadow: 0 12px 24px rgba(0,0,0,0.35);
       animation: welcomePop 0.25s ease-out;
       position: relative;
-      max-height: calc(100dvh - 40px);
+      max-height: calc(100dvh - 24px);
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
     }
@@ -467,13 +467,13 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 12px;
-      padding-right: 36px;
+      margin-bottom: 8px;
+      padding-right: 32px;
     }
 
     .welcome-header h3 {
       color: #133d60;
-      font-size: 18px;
+      font-size: 17px;
       margin: 0;
     }
 
@@ -484,11 +484,11 @@
       color: #666;
       cursor: pointer;
       position: absolute;
-      top: 10px;
-      right: 10px;
-      width: 32px;
-      height: 32px;
-      line-height: 32px;
+      top: 8px;
+      right: 8px;
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
       text-align: center;
       border-radius: 999px;
       background: #fff;
@@ -498,32 +498,42 @@
     .welcome-layout {
       display: grid;
       grid-template-columns: 140px 1fr;
-      gap: 16px;
+      gap: 12px;
       align-items: center;
     }
 
     .welcome-layout img {
       width: 100%;
-      max-width: 140px;
+      max-width: 110px;
       height: auto;
       border-radius: 10px;
       background: #f7f7f7;
     }
 
-    @media (max-width: 520px) {
+    @media (max-width: 520px), (max-height: 700px) {
+      .welcome-content {
+        padding: 12px 14px;
+      }
+      .welcome-header h3 {
+        font-size: 16px;
+      }
+      .welcome-body {
+        font-size: 12px;
+        line-height: 1.3;
+      }
       .welcome-layout {
-        grid-template-columns: 1fr;
+        grid-template-columns: 90px 1fr;
+        gap: 10px;
       }
       .welcome-layout img {
-        max-width: 160px;
-        margin: 0 auto;
+        max-width: 90px;
       }
     }
 
     .welcome-body {
       color: #333;
-      font-size: 14px;
-      line-height: 1.5;
+      font-size: 13px;
+      line-height: 1.35;
     }
 
     .footer-corner {
@@ -786,11 +796,14 @@ function closeWelcomeModal(e) {
           <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
           <div>
             <a class="local-admin-link" href="https://www.brokeant.com/local-admin.html" target="_blank" rel="noopener">BECOME A LOCAL ADMIN, CLICK HERE FOR DETAILS</a><br><br>
-            Pay $2 per location to unlock 50 advertisements and verified buyers and sellers.<br>
-            Post items, browse deals, and message sellers - no clutter, no hidden fees.<br>
-            Need more reach? Request additional locations anytime.<br>
-            BrokeAnt is inspired by "brocante," the French word for a secondhand market.<br>
-            Emails stay hidden unless you choose to share.
+            When you pay the $2, you get access to all items in your location and any other locations you're approved to view.<br><br>
+            BrokeAnt is your local, ad-free marketplace.<br>
+            For just $2 per location, you get 50 advertisements and access to verified buyers and sellers in that area.<br>
+            Post your items, browse nearby deals, and message sellers directly - no clutter, no hidden fees.<br>
+            Need more reach? Request additional locations anytime to expand your audience.<br>
+            Happy buying and selling!<br><br>
+            Brocante "In France, a shop or market where secondhand goods are sold" But the French pronunciation is slightly different than the English way. So thats how I got my name. Broke Ant. Happy selling and buying !!<br><br>
+            Even though emails are hidden by default, either person can choose to share their email or phone number in a message if they want.
           </div>
         </div>
       </div>
