Make edit image URL optional in my listings

--- a/my-listings.html
+++ b/my-listings.html
@@ -605,7 +605,7 @@
         </div>
         <div class="form-group">
           <label for="editImageUrl">Image URL (optional)</label>
-          <input type="url" id="editImageUrl" placeholder="https://...">
+          <input type="text" id="editImageUrl" placeholder="https://... or leave as-is to keep current image">
         </div>
         <div class="form-group">
           <label for="editExtraImageUrls">Additional Image URLs (optional)</label>
