Replace homepage static text block with marketplace image

--- a/index.html
+++ b/index.html
@@ -708,20 +708,8 @@
   
   
   <div id="welcomeStatic" class="welcome-static">
-    <h3>Hi, Thanks for stopping by</h3>
     <div class="welcome-layout">
-      <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
-      <div>
-        <a class="local-admin-link" href="https://www.brokeant.com/local-admin.html" target="_blank" rel="noopener">BECOME A LOCAL ADMIN, CLICK HERE FOR DETAILS</a><br><br>
-        When you pay the $2, you get access to all items in your location and any other locations you're approved to view.<br><br>
-        BrokeAnt is your local, ad-free marketplace.<br>
-        For just $2 per location, you get 50 advertisements and access to verified buyers and sellers in that area.<br>
-        Post your items, browse nearby deals, and message sellers directly - no clutter, no hidden fees.<br>
-        Need more reach? Request additional locations anytime to expand your audience.<br>
-        Happy buying and selling!<br><br>
-        Brocante "In France, a shop or market where secondhand goods are sold" But the French pronunciation is slightly different than the English way. So thats how I got my name. Broke Ant. Happy selling and buying !!<br><br>
-        Even though emails are hidden by default, either person can choose to share their email or phone number in a message if they want.
-      </div>
+      <img src="/lucid-origin_Painterly-realistic_closest_to_cheerful-ant_vibe_Prompt_A_friendly_marketplace_b-0.jpg" alt="Friendly marketplace" style="max-width: 100%; height: auto;">
     </div>
   </div>
 
