--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       border-radius: 14px;
       padding: 18px 20px;
       margin: 30px auto 20px;
-      max-width: 820px;
+      max-width: 900px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
 
@@ -214,15 +214,12 @@
     }
 
     .welcome-static .welcome-layout {
-      display: grid;
-      grid-template-columns: 140px 1fr;
-      gap: 16px;
-      align-items: center;
+      display: block;
     }
 
     .welcome-static img {
       width: 100%;
-      max-width: 140px;
+      max-width: 100%;
       height: auto;
       border-radius: 10px;
       background: #f7f7f7;
@@ -240,11 +237,11 @@
 
     @media (max-width: 520px) {
       .welcome-static .welcome-layout {
-        grid-template-columns: 1fr;
+        display: block;
       }
       .welcome-static img {
-        max-width: 160px;
-        margin: 0 auto;
+        max-width: 100%;
+        margin: 0;
       }
     }
 
