Update latest section heading text on homepage

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
   </div>
   
   <div class="listings-section">
-    <h2>Latest Advertisements</h2>
+    <h2>Latest total items for sale or Wanted</h2>
     <div class="listings-grid" id="listingsGrid">
       <div class="no-listings">Loading advertisements...</div>
     </div>
